Se agrego kanban y corrigieron vistas
